--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://tmai-p.github.io/dads",
+  "homepage": "http://tmai-p.github.io/dads/#",
   "name": "dads",
   "version": "0.1.0",
   "private": true,
